force-app/main/default/objects/NTE_Routing_Config__mdt/NTE_Routing_Config__mdt.object-meta.xml
<CustomObject>
    <description>Environment-specific owner routing for National Transition Event submissions.</description>
    <label>NTE Routing Configuration</label>
    <pluralLabel>NTE Routing Configurations</pluralLabel>
</CustomObject>