force-app/main/default/objects/NTE_Routing_Config__mdt/fields/Application_Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Application_Event_Code__c</fullName>
    <label>Final Pack Event Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>