force-app/main/default/objects/NTE_Routing_Config__mdt/fields/Exhibitor_Staff_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Staff_Form_URL__c</fullName>
    <description>Public form used by exhibitors to provide or update their NTE staff details.</description>
    <label>Exhibitor Staff Form URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>