force-app/main/default/objects/NTE_Routing_Config__mdt/fields/Heavy_Vehicle_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Vehicle_Form_URL__c</fullName>
    <description>Public form used to collect outstanding NTE heavy vehicle and logistics details.</description>
    <label>Heavy Vehicle Form URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>