force-app/main/default/objects/NTE_Routing_Config__mdt/fields/Logo_Update_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_Update_Form_URL__c</fullName>
    <description>Public form used by confirmed NTE organisations to provide their latest logo.</description>
    <label>Logo Update Form URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>