force-app/main/default/objects/NTE_Routing_Config__mdt/fields/Owner_Username__c.field-meta.xml
<CustomField>
    <fullName>Owner_Username__c</fullName>
    <description>Username of the active Salesforce user who owns NTE submissions and receives internal notifications in this environment.</description>
    <label>Owner Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>