force-app/main/default/objects/NTE_Routing_Config__mdt/fields/Partner_Application_URL__c.field-meta.xml
<CustomField>
    <fullName>Partner_Application_URL__c</fullName>
    <label>Partner Application URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>