force-app/main/default/objects/NTE_Routing_Config__mdt/fields/Partner_Final_Pack_URL__c.field-meta.xml
<CustomField>
    <fullName>Partner_Final_Pack_URL__c</fullName>
    <label>Partner Final Pack URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>