force-app/main/default/objects/NTE_Routing_Config__mdt/fields/Partner_Staff_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Partner_Staff_Form_URL__c</fullName>
    <description>Public form used by partners and sponsors to provide or update their NTE staff details.</description>
    <label>Partner Staff Form URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>